--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Aftab124.github.io/personal-portfolio",
+  "homepage": "http://Aftab124.github.io/Mohammed-Aftab",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
